[project]
name = "pykagcee"
version = "0.1.0"
description = "Knowledge Graph Constructor for python projects."
readme = "README.md"
authors = [
    { name = "Oscar Arambula", email = "peteroso876@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "fasteners>=0.19",
    "jedi>=0.19.2",
    "parso>=0.8.4",
    "py2neo>=2021.2.4",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "typer>=0.15.1",
]

[project.scripts]
pykagcee = "pykagcee:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.8.6",
]
